# cloud-office-ml

./: .dockerignore  README.md  project.ipynb  pyproject.toml  test_request.py
notebooks/: deploy_nb.ipynb
