[project]
name = "cloud-office-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2025.9.0",
    "gcsfs>=2025.9.0",
    "google-cloud-aiplatform<1.122.0",
    "google-cloud-storage>=2.19.0",
    "joblib>=1.5.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",

]
